Implement porject service with the frontend