@@ -1,12 +1,14 @@
 package com.bidsphere.project.config;
 
-
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -18,6 +20,15 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
     
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    
+    @Value("${cors.allowed.origins:*}")
+    private String corsAllowedOrigins;
+    
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+    }
+    
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -27,12 +38,16 @@ public class SecurityConfig {
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authorizeHttpRequests(auth -> auth
+                // Public endpoints
                 .requestMatchers("/api/projects/health").permitAll()
-                .requestMatchers("/api/projects/*/view").permitAll() // Allow tracking views
-                .requestMatchers("/api/projects").permitAll() // Public listing
-                .requestMatchers("/api/projects/*").permitAll() // Public view (handled by service)
+                .requestMatchers(HttpMethod.POST, "/api/projects/*/view").permitAll() // Allow tracking views
+                // GET endpoints - public for browsing projects
+                .requestMatchers(HttpMethod.GET, "/api/projects").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/projects/**").permitAll()
+                // All other endpoints require authentication
                 .anyRequest().authenticated()
-            );
+            )
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         
         return http.build();
     }
@@ -40,11 +55,25 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Configure properly in production
+        
+        // Parse allowed origins from environment variable
+        if ("*".equals(corsAllowedOrigins)) {
+            // Allow all origins for local development
+            configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+            configuration.setAllowCredentials(false); // Cannot use credentials with wildcard
+            System.out.println("CORS: Allowing all origins (local development mode)");
+        } else {
+            // Production mode - use specific origins
+            String[] origins = corsAllowedOrigins.split(",");
+            configuration.setAllowedOrigins(Arrays.asList(origins));
+            configuration.setAllowCredentials(true);
+            System.out.println("CORS: Allowing specific origins: " + Arrays.toString(origins));
+        }
+        
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setExposedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);
+        configuration.setMaxAge(3600L);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
